# beta-earth

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE.md  README.md  SECURITY.md  START_BETA_EARTH.bat  pyproject.toml  run_beta_earth.py
.github/workflows/: ci.yml
data/: economy.json  economy.schema.json  quests.json  quests.schema.json  world.json  world.schema.json
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DECISIONS.md  TESTING.md
src/beta_earth/: bootstrap.py  observability.py  timekeeping.py
src/beta_earth/application/: __init__.py  ports.py  service.py
src/beta_earth/domain/: __init__.py  economy.py  equipment.py  identity.py  models.py  quests.py  rules.py
src/beta_earth/infrastructure/: __init__.py  catalog_validation.py  economy_loader.py  instance_guard.py  json_document.py  json_store.py  process_isolation.py  quest_loader.py  runtime_paths.py  world_loader.py
src/beta_earth/presentation/: __init__.py  http_server.py  view_models.py
static/: app.css  app.js  index.html
tests/: __init__.py  support.py  test_application.py  test_domain.py  test_economy.py  test_equipment_readiness.py  test_equipment_readiness_v048.py  test_hardening_v040.py  test_launcher.py  test_launcher_dry_run_v045.py  test_migrations_and_runtime.py  test_persistence.py  test_platform_and_resilience.py  test_quests.py  test_security_hardening.py  test_web.py
tools/: invoke_supported_python.cmd
